--- a/debian/control
+++ b/debian/control
@@ -1,10 +1,9 @@
 Source: xresprobe
 Section: x11
 Priority: optional
-Maintainer: Debian X Strike Force <debian-x@lists.debian.org>
-Uploaders: Otavio Salvador <otavio@debian.org>, David Nusinow <dnusinow@debian.org>
-Build-Depends: debhelper (>= 4.0.0), cdbs
-Standards-Version: 3.6.1.0
+Maintainer: Debian QA Group <packages@qa.debian.org>
+Build-Depends: debhelper (>=9), cdbs
+Standards-Version: 3.9.3
 
 Package: xresprobe
 Architecture: any
@@ -20,4 +19,4 @@ Description: X Resolution Probe
  .
  It contains the 'ddcprobe' package, which performs a DDC probe to the monitor;
  however, ddcprobe only works on i386 and powerpc. The laptop detection routines
- are, however, sufficiently generic to to be useful to other architectures.
+ are, however, sufficiently generic to be useful to other architectures.
